# code-sandbox

./: .gitigniore  .gitignore  AGENTS.md  CHECKLIST-PHASE-1.md  CLAUDE.md  Cargo.toml  HOMEBREW_SETUP.md  PLAN.md  README.md  codesandbox.rb  install.js  package.json
.serena/: project.yml
server/: backend-checklist.md  go.mod  go.sum  main.go
server/internal/handlers/: containers.go
src/: cli.rs  config.rs  container.rs  language.rs  lib.rs  main.rs  main_test.rs  server.rs  settings.rs  state.rs  state_test.rs  worktree.rs
src/container/: manage.rs  mod.rs  naming.rs  runtime.rs
src/server/: mod.rs
tests/: cli_test.rs  config_test.rs  container_test.rs  language_test.rs  main_test.rs  runtime_test.rs  server_test.rs  settings_test.rs  state_test.rs  worktree_test.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  state.ts
web/src/components/: diff.tsx  explorer.tsx  terminal.tsx
web/src/components/ui/: button.tsx  card.tsx  tabs.tsx
www/: frontend-checklist.md  package-lock.json  package.json
www/src/: App.tsx  main.tsx
www/src/components/: ProtectedRoute.tsx
www/src/pages/: Dashboard.tsx  Login.tsx
www/src/state/: auth.ts
