[package]
name = "codesandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codesandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
home = "0.5"
chrono = { version = "0.4", features = ["clock"] }
