[package]
name = "codesandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codesandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
home = "0.5"
chrono = { version = "0.4", features = ["clock"] }
axum = { version = "0.6", features = ["ws"] }
tempfile = "3.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tower-http = { version = "0.4", features = ["fs"] }
tower = "0.4"
atty = "0.2"
base64 = "0.21"
once_cell = "1.19"

[dev-dependencies]
